<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="10dp"
        android:text="@string/title_lastest" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_volunteer_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:hint="@string/name_lastest"
                android:padding="10dp"
                android:background="@drawable/selector_edit_blue"
                android:singleLine="true"
                android:imeOptions="actionNext" />

            <EditText
                android:id="@+id/txt_volunteer_lastname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:hint="@string/lastname_lastest"
                android:padding="10dp"
                android:background="@drawable/selector_edit_blue"
                android:singleLine="true"
                android:imeOptions="actionNext" />

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rdb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/rdb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_volunteer_save"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:background="@drawable/selector_btn_blue"
                android:layout_margin="10dp"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>